--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "concurrently": "^8.2.2",
-    "dotenv": "^16.4.5"
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "path": "^0.12.7"
   }
 }
