--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "mission",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently \"cd backend && npm run start:dev\" \"cd frontend && node app\""
+    "start": "concurrently \"cd backend && npm run start:dev\" \"cd frontend && node server\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "concurrently": "^8.2.2",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2"
   }
 }
