react frontend 생성

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@
 .env.test.local
 .env.production.local
 .env.local
+
+// "start": "concurrently \"cd backend && npm run start:dev\" \"cd frontend && node server\""
