--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "concurrently": "^8.2.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
